--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 secreteJwtString=aW36uxTZDNFdqwiqCyFfSkOYOas7utR65MygcGsXd8A=
 
 
-aws.s3.access=AKIAWGOSJSH2223KNANX
-aws.s3.secrete=TX6itiELMCs4Zkdyuk5oEAVoAUW8221BRbRaCDB1
+aws.s3.access=your key
+aws.s3.secrete=your key
 aws.s3.bucket-name=ecommerce-phegon-ct101
 aws.s3.region=ap-south-1
